--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="mailto:Amar.mudgal20@bimtech.ac.in">AmarMudgal@mail.me</a>
+                    <a href="mailto:Amar.mudgal20@bimtech.ac.in">AmarMudgal@e-mail.me</a>
                 </p>
 
                 <p class="section-desc">
